# ChatbotBuilder

./: .env.example  .replit  RENDER_DEPLOY.md  admin_panel.py  admin_routes.py  app.py  gunicorn.conf.py  models.py  pyproject.toml  replit.md  routes.py  service-worker.js
attached_assets/: Pasted--AI-Chatbot-Generator-Platform-Yaratish-Uchun-Prompt-Menga-O-zbek-tilida-interfeysi-bo-lgan-am-1757474938696_1757474938697.txt  Pasted--Cloning-from-https-github-com-akramjon10000-ChatbotBuilder-Checking-out-commit-7ef321f187-1757653182030_1757653182031.txt  Pasted-10-201-125-66-13-Sep-2025-04-08-45-0000-HEAD-HTTP-1-1-200-0-https-chatbotbuilder-qsf1--1757758569704_1757758569705.txt  Pasted-2025-09-13-05-03-33-968-INFO-root-Telegram-message-sent-successfully-to-chat-819931801-10-201-125-6-1757819558080_1757819558082.txt  Pasted-Menga-professional-darajadagi-AI-chatbot-generator-platformasi-yarating-Bu-platforma-O-zbek-tilida--1757478307595_1757478307596.txt  Pasted-console-elements-network-resources-settings-Local-Storage-Key-Value-Session-Storage-Key-Valu-1757555312950_1757555312951.txt
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: access_control.py  ai_service.py  marketing_service.py  platform_service.py  telegram_marketing_service.py  telegram_service.py
static/: manifest.json
static/css/: contrast-improvements.css  pricing.css  style.css
tasks/: scheduler.py
templates/: base.html  chat.html  connect_telegram.html  dashboard.html  index.html  knowledge_guide.html  profile.html  trial_expired.html
utils/: helpers.py
(+26 files in other folders)
