[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AI Chatbot Platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.35.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "flask-babel>=4.0.0",
    "apscheduler>=3.11.0",
    "flask-wtf>=1.2.2",
    "flask-limiter>=3.12",
    "flask-talisman>=1.1.0",
    "flask-migrate>=4.1.0",
    "sendgrid>=6.12.4",
]

[tool.setuptools]
packages = ["services", "tasks", "utils"]
